@@ -232,7 +232,7 @@ namespace Flags {
     *Ricochet, *SuperBullet, *InvisibleBullet, *Stealth, *Tiny, *Narrow,
     *Shield, *Steamroller, *ShockWave, *PhantomZone, *Genocide, *Jumping,
     *Identify, *Cloaking, *Useless, *Masquerade, *Seer, *Thief, *Burrow,
-    *Wings, *ReverseControls, *Agility,
+    *Wings, *ReverseControls, *Agility, *LowGravity,
     *Colorblindness, *Obesity, *LeftTurnOnly, *RightTurnOnly, *Momentum,
     *Blindness, *Jamming, *WideAngle, *NoJumping, *TriggerHappy,
     *ReverseOnly, *ForwardOnly, *Bouncy;
